namespace MovieApp.Data
{
    public enum Genre
    {
        Action,
        Horror,
        Drama,
        Comedy,
        Scifi,
        Thriller,
        Romance, 
        Crime,
        Documentry,
        Biography,
        Fantasy
    }
}
