using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace ConsoleApp.Data
{
    public enum Rating
    {
        oneStar,
        twoStar,
        threeStar,
        fourStar,
        fiveStar

    }
}
